--- a/literature.bib
+++ b/literature.bib
@@ -105,6 +105,16 @@
           note = "Stand 23.01.2014",
       }
  
+ @misc{itk:mail,
+           author = "Smith, Jolinda",
+           title = "Create 3D image data by a series of 2D dicom files t",
+           year = "2003",
+           url = "{http://www.itk.org/pipermail/insight-users/2003-September/004762.html}",
+           note = "Stand 05.02.2014",
+       }
+ 
+ http://www.itk.org/pipermail/insight-users/2003-September/004762.html
+ 
  @BOOK{radio:hounsfield,
     AUTHOR       = "Bücheler, Egon and Lackner, Klaus-Jürgen and Thelen, Manfred",
     TITLE        = "Einführung in die Radiologie: Diagnostik und Interventionen",
@@ -125,6 +135,13 @@
  	PUBLISHER    = "B.G. Teubner Stuttgart Leipzig",
  	YEAR         = "2000",
  }
+ 
+ @BOOK{java:insel,
+  	AUTHOR       = "Ullenboom, Christian",
+  	TITLE        = "Java ist auch eine Insel - Das umfassende Handbuch",
+  	PUBLISHER    = "Galilieo Press",
+  	YEAR         = "2007",
+  }
  
  @BOOK{goll:swa,
   	AUTHOR       = "Goll, Joachim and Dausmann, Manfred",
